--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,14 +37,14 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
-      <a href="https://oborel.github.io/obo-relations"
+      <a href="https://github.com/soilfoodwebontology/sfwo"
       class="btn">Documentation and User Guide</a>
-      <a href="https://github.com/oborel/obo-relations"
+      <a href="https://github.com/soilfoodwebontology/sfwo"
       class="btn">View Repository on GitHub</a>
 
       <h2>Browsing the SFWO</h2>
 
-      <a href="https://www.ebi.ac.uk/ols/ontologies/ro"
+      <a href="https://agroportal.lirmm.fr/ontologies/SFWO"
       class="btn">The SFWO on AgroPortal</a>
 <!--      <a href="http://www.ontobee.org/ontology/RO"
       class="btn">RO on OntoBee</a>
