--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
       <a href="https://github.com/soilfoodwebontology/sfwo"
-      class="btn">Documentation and User Guide</a>
+      class="btn">Documentation and User Guide (available soon)</a>
       <a href="https://github.com/soilfoodwebontology/sfwo"
       class="btn">View Repository on GitHub</a>
 
