--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,8 +37,8 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
-      <a href="https://github.com/soilfoodwebontology/sfwo"
-      class="btn">Documentation and User Guide (available soon)</a>
+      <a href="https://soilfoodwebontology.github.io/sfwo/"
+      class="btn">Documentation and User Guide</a>
       <a href="https://github.com/soilfoodwebontology/sfwo"
       class="btn">View Repository on GitHub</a>
 
